Bug 32109: Fix spacing in toolbars containing text links
This patch adds a new class to toolbars in certain contexts: Where the
toolbar contains only text links (as opposed to Bootstrap-styled
controls). This lets us set some comfortable padding on the links.

To test, apply the patch and rebuild the staff interface CSS.

Test the following pages to confirm that the toolbar of selection links
("Select all," "Clear all," etc.) has legible spacing.

- Cataloging -> Batch item modification -> List of submitted barcodes
- Cataloging -> Batch item deletion -> List of submitted barcodes
- Cataloging -> Batch record modification -> List of submitted records
- Cataloging -> Batch record deletion -> List of submitted records
- Circulation -> Checkout notes
- Tools -> Batch extend due dates -> Preview results
- Tools -> Batch patron modification -> List of submitted patrons
- Tools -> OPAC problem reports

--- a/koha-tmpl/intranet-tmpl/prog/css/src/_toolbar.scss
+++ b/koha-tmpl/intranet-tmpl/prog/css/src/_toolbar.scss
@@ -75,4 +75,11 @@
             font-size: 100%;
         }
     }
+
+    &.selections-toolbar {
+        a {
+            display: inline-block;
+            padding: 0 .5em;
+        }
+    }
 }
